# csp

./: LICENSE
ising/: README.md  add-ld-gi-pathes.sh  meson.build
ising/core/: disturbance.vala  energy.vala  integrator.vala  meson.build  system.vala
ising/ising/: disturbance.vala  energy.vala  energy6.vala  meson.build  system.vala
ising/python/: ising.py  main.py
